Add GitHub actions to run ESLint and Prettier

--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "lint": "eslint src --ext ts",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "test": "node ./out/test/runTest.js",
+    "format:check": "prettier --check './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
