--- a/package.json
+++ b/package.json
@@ -148,13 +148,15 @@
     "@atlaskit/editor-wikimarkup-transformer": "^11.2.34",
     "jira-client": "^8.2.2",
     "jsdom": "^24.0.0",
-    "prosemirror-model": "^1.19.4"
+    "prosemirror-model": "^1.19.4",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "@types/jira-client": "^7.1.8",
     "@types/jsdom": "^21.1.6",
     "@types/mocha": "^10.0.3",
     "@types/node": "18.x",
+    "@types/turndown": "^5.0.4",
     "@types/vscode": "^1.83.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
