--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
         {
           "type": "webview",
           "id": "jiralens",
-          "name": "JiraLens"
+          "name": "JiraLens",
+          "icon": "resources/jiralens.png"
         }
       ]
     },
@@ -141,7 +142,8 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "test": "node ./out/test/runTest.js",
     "format:check": "prettier --check './**/*.{js,ts,md,json}' --config ./.prettierrc",
-    "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
+    "prepare": "husky"
   },
   "dependencies": {
     "@atlaskit/adf-schema": "^35.4.0",
@@ -152,6 +154,8 @@
     "turndown": "^7.1.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@types/jira-client": "^7.1.8",
     "@types/jsdom": "^21.1.6",
     "@types/mocha": "^10.0.3",
@@ -163,11 +167,23 @@
     "@vscode/test-electron": "^2.3.6",
     "eslint": "^8.52.0",
     "glob": "^10.3.10",
+    "husky": "^9.1.7",
     "mocha": "^10.2.0",
     "prettier": "^3.0.3",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
