--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
-name: ESLint
+name: Run Tests
 
 on:
   pull_request:
 
 jobs:
-  eslint:
-    name: Code scanning with ESLint
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codes
@@ -17,7 +17,7 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run the ESLint scanner
-        run: npm run lint
+      - name: Run tests
+        run: npm test
