ci: set up the auto release process

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "CODEOWNERS",
     "commitlint",
     "commitlintrc",
+    "conventionalcommits",
     "jinzihang",
     "jiralens",
     "nosources",
