--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
-name: Run Tests
+name: Release
 
 on:
   push:
     branches: ['main']
-  pull_request:
 
 jobs:
-  test:
-    name: Run tests
+  release:
+    name: Semantic release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codes
@@ -19,7 +18,9 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Semantic release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: HUSKY=0 npx semantic-release
