--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@semantic-release/changelog": "^6.0.3",
     "@types/jira-client": "^7.1.8",
     "@types/jsdom": "^21.1.6",
     "@types/node": "22.x",
@@ -162,6 +163,7 @@
     "eslint": "^8.52.0",
     "husky": "^9.1.7",
     "prettier": "^3.0.3",
+    "semantic-release": "^24.2.5",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
@@ -176,6 +178,33 @@
     "*.ts": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
+    ]
+  },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits"
+        }
+      ],
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json",
+            "package-lock.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]"
+        }
+      ],
+      "@semantic-release/github"
     ]
   }
 }
