--- a/package.json
+++ b/package.json
@@ -136,6 +136,8 @@
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
+    "lint": "eslint src --ext ts",
+    "pretest": "npm run lint",
     "test": "echo \"Temporary placeholder for the test script\" && exit 0",
     "format:check": "prettier --check './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
