--- a/package.json
+++ b/package.json
@@ -167,7 +167,7 @@
     "prettier": "^3.0.3",
     "semantic-release": "^24.2.5",
     "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
+    "typescript": "~5.3.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
