ci: implement GitHub actions (#30)
* ci: implement husky and PRLint

* ci: update GitHub actions

* test: remove template test scripts and dependencies

* ci: set up the auto release process

* fix: recover accidentally removed npm scripts

* ci: downgrade TS to an estree-supported version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
-name: Prettier
+name: Release
 
 on:
   push:
     branches: ['main']
-  pull_request:
 
 jobs:
-  prettier:
-    name: Code scanning with Prettier
+  release:
+    name: Semantic release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codes
@@ -21,5 +20,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run the Prettier scanner
-        run: npm run format:check
+      - name: Semantic release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: HUSKY=0 npx semantic-release
