ci: update the repo url for semantic release

--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     ]
   },
   "release": {
+    "repositoryUrl": "https://github.com/JinZihang/vscode-jiralens",
     "branches": [
       "main"
     ],
