ci: change the token name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Semantic release
         env:
-          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
+          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
         run: HUSKY=0 npx semantic-release
