--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,20 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # https://github.com/marketplace/actions/use-app-token
+      - name: Generate token
+        uses: wow-actions/use-app-token@v2
+        with:
+          app_id: ${{ secrets.SEMANTIC_RELEASE_APP_ID }}
+          private_key: ${{ secrets.SEMANTIC_RELEASE_PRIVATE_KEY }}
+
       - name: Semantic release
+        with:
+          GITHUB_TOKEN: ${{ env.BOT_TOKEN }}
+          GH_TOKEN: ${{ env.BOT_TOKEN }}
         env:
-          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
+          GIT_AUTHOR_NAME: ${{ env.BOT_NAME }}[bot]
+          GIT_AUTHOR_EMAIL: ${{ env.BOT_NAME }}[bot]@users.noreply.github.com
+          GIT_COMMITTER_NAME: ${{ env.BOT_NAME }}[bot]
+          GIT_COMMITTER_EMAIL: ${{ env.BOT_NAME }}[bot]@users.noreply.github.com
         run: HUSKY=0 npx semantic-release
