ci: fix the release workflow steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,11 @@ jobs:
           private_key: ${{ secrets.SEMANTIC_RELEASE_PRIVATE_KEY }}
 
       - name: Semantic release
-        with:
-          GITHUB_TOKEN: ${{ env.BOT_TOKEN }}
-          GH_TOKEN: ${{ env.BOT_TOKEN }}
         env:
-          GIT_AUTHOR_NAME: ${{ env.BOT_NAME }}[bot]
-          GIT_AUTHOR_EMAIL: ${{ env.BOT_NAME }}[bot]@users.noreply.github.com
-          GIT_COMMITTER_NAME: ${{ env.BOT_NAME }}[bot]
-          GIT_COMMITTER_EMAIL: ${{ env.BOT_NAME }}[bot]@users.noreply.github.com
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
+          GIT_AUTHOR_NAME: ${{ steps.generate_token.outputs.app_slug }}[bot]
+          GIT_AUTHOR_EMAIL: ${{ steps.generate_token.outputs.app_slug }}[bot]@users.noreply.github.com
+          GIT_COMMITTER_NAME: ${{ steps.generate_token.outputs.app_slug }}[bot]
+          GIT_COMMITTER_EMAIL: ${{ steps.generate_token.outputs.app_slug }}[bot]@users.noreply.github.com
         run: HUSKY=0 npx semantic-release
