chore: update the spell-checker dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,10 +17,13 @@
     "commitlint",
     "commitlintrc",
     "conventionalcommits",
+    "issuelinks",
+    "issuetype",
     "jinzihang",
     "jiralens",
     "nosources",
     "prosemirror",
+    "resolutiondate",
     "vscodeignore",
     "wikimarkup"
   ]
